--- a/01_board/group_study_board_back/src/main/resources/application.properties
+++ b/01_board/group_study_board_back/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=1234
 #mybatis
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/**.xml
-mybatis.type-aliases-package=kr.or.gpstd
+mybatis.type-aliases-package=kr.or.skb
 mybatis.configuration.jdbc-type-for-null=null
 
 #fileupload setting
@@ -18,7 +18,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 
 #filelocation
-file.root=C:/Temp/groupStudy_board/
+file.root=C:/Temp/groupstudy/
 
 #jwt enc key
 jwt.secret = kh.web.secret.code.dangsan.aclass.long.long
