회원가입 완료(로그인 진행 중)

--- a/01_board/group_study_board_back/src/main/resources/application.properties
+++ b/01_board/group_study_board_back/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 #server port
-server.port=80
+server.port=7777
 
 #oracle
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 #spring.datasource.url=jdbc:oracle:thin:@1.220.236.74:15213/xe
 spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521/xe
-spring.datasource.username=soolkkeobi
+spring.datasource.username=groupstudy
 spring.datasource.password=1234
 
 #mybatis
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/**.xml
-mybatis.type-aliases-package=kr.or.skb
+mybatis.type-aliases-package=study.group
 mybatis.configuration.jdbc-type-for-null=null
 
 #fileupload setting
@@ -19,7 +19,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 
 #filelocation
-file.root=C:/Temp/soolkkerbi/
+file.root=C:/Temp/studyGroup/
 
 #jwt enc key
 jwt.secret = kh.web.secret.code.dangsan.aclass.long.long
